--- a/src/pages/globals.css
+++ b/src/pages/globals.css
@@ -23,3 +23,21 @@ body {
 nextjs-portal {
   display: none;
 }
+
+.custom-scrollbar::-webkit-scrollbar {
+  width: 10px;
+  background-color: transparent;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb {
+  background-color: rgba(148, 146, 145, 0.2);
+  border-radius: 10px;
+}
+
+.custom-scrollbar::-webkit-scrollbar-thumb:hover {
+  background-color: rgba(148, 146, 145, 0.5);
+}
+
+.custom-scrollbar::-webkit-scrollbar-track {
+  background-color: transparent;
+}
